--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         
         .music-note { position: fixed; top: 10px; right: 10px; z-index: 100; cursor: pointer; font-size: 30px; background: white; border-radius: 50%; padding: 5px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
     </style>
+    <meta name="google-adsense-account" content="ca-pub-3763195707163360">
 </head>
 <body>
 
